              use 'django.utils.choices.CallableChoiceIterator' instead.
        - https://docs.djangoproject.com/en/5.1/releases/5.1/

    Non breaking changes :
    ----------------------
        # Deprecations :
            - The method 'creme_core.core.entity_cell.EntityCellCustomField.build()' with integer "value" is deprecated;
              pass a string (ID ou UUID) instead.
            - In 'creme_core.models :
                - The method 'CremePropertyTypeManager.smart_update_or_create() is deprecated;
                  use the classical methods 'create()' or 'update_or_create()' instead.
                  Notice: if you still want to set the field "subject_ctypes" from models like before,
                          you can use the new method 'CremePropertyType.set_subject_ctypes()'.
                - These methods of 'CremeEntity' are now deprecated (use the new module 'creme_core.core.cloning' instead) :
                    - clone()
                    - _clone_object()
                    - _clone_custom_values()
                    - _clone_m2m()
                    - _copy_properties()
                    - _copy_relations()
                    - _pre_save_clone()
                    - _post_clone()
                    - _post_save_clone()
            - The function 'creme_core.utils.translation.get_model_verbose_name()' is deprecated;
              use 'smart_model_verbose_name()' instead.
            - The method 'creme_core.tests.base._CremeTestCase.assertRelationCount' is deprecated;
              use the new methods 'assertHaveRelation()' & 'assertHaveNoRelation()' instead.
            - In 'creme_core.templatetags' :
                - In the module "creme_core_tags", the argument "callback_url" of '{% inner_edition_uri %}' is deprecated.
                - In the module "creme_ctype" :
                    - The tag "{% ctype_for_model %}" is deprecated; use the filter "|ctype_for_instance" instead.